<resources>
    <string name="app_name">Achiever</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Calendario</string>
    <string name="title_notifications">Tareas</string>
    <string name="usr_field">Usuario</string>
    <string name="pass_field">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="mn_cerrarsesion">Cerrar sesión</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="sevenday">SAB</string>
    <string name="sixday">VIE</string>
    <string name="fiveday">JUE</string>
    <string name="fourday">MIE</string>
    <string name="threeday">MAR</string>
    <string name="twoday">LUN</string>
    <string name="oneday">DOM</string>
    <string name="tasks">TAREAS</string>
    <string name="new_task">Nueva Tarea</string>
    <string name="save">GUARDAR</string>
    <string name="vista_semanal">Vista Semanal</string>
    <string name="calendario">Calendario</string>
    <string name="lista_de_tareas">Lista de Tareas</string>
    <string name="nuevo_evento">Nuevo Evento</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_sus_datos">Ingrese sus datos</string>
    <string name="create">CREATE</string>
    <string name="reset">RESTABLECER</string>
</resources>