<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.NewAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="50sp"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            app:srcCompat="@drawable/nombre" />

        <TextView
            android:id="@+id/newAcctText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textSize="22sp"
            android:text="@string/ingrese_sus_datos" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/new_name"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/new_email"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/new_pass"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_field"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingTop="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/yellow_700"
            android:padding="10dp"
            android:text="@string/crear_cuenta"
            android:textColor="@color/black"
            app:cornerRadius="50dp" />



    </LinearLayout>

</RelativeLayout>