<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearl">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:visibility="gone"
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="Error al crear usuario, vuelva a intentar más tarde."
                android:minHeight="48dp"
                android:textColor="@android:color/holo_red_dark"
                android:textColorHint="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/nombre"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/prompt_email"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/pass_field"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingTop="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/newUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearl"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />


</RelativeLayout>